test/zinc_source/compile_errors/metadata/06_constraint_raw_typemeta_unsupported.zn
// expected-error: unsupported constraint call 'TypeMeta\(\)'

#[ type(a) in [TypeMeta()] ]
struct Bad {
    a: infer
}

fn main() {
    bad = Bad { a: 1 }
    print(type(bad).name)
}
